--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,6 @@ server:
 mybatis-plus:
   global-config:
     db-config:
-      logic-delete-field: isDeleted  # 全局逻辑删除的实体字段名
+      logic-delete-field: is_deleted  # 全局逻辑删除的实体字段名
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
